# omniwsa

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md
docs/: index.md  interop_cst.md
docs/dialects/: burghard.md  censoredusername.md  check_updates.sh  esotope.md  leahhirst.md  lime.md  littlebughunter.md  nossembly.md  omniwsa.md  others.md  palaiologos.md  rdebath.md  respace.md  voliva.md  wconrad.md  whitelips.md  wsf.md
docs/drafts/: byte_trie.md  compact_ws_cst.md  cst_revamp.md  dynamic_parsing.md  fuzz_syntax.md  general_integer_parsing.md  general_string_parsing.md  macros.md  mnemonics.md  palaiologos_parsing.gv  parsing.md  scanner.md  testpack.md
omniwsa-ls/: Cargo.toml  README.md
omniwsa-ls/src/: main.rs
omniwsa-vscode/: package-lock.json  package.json  tsconfig.json
omniwsa-vscode/client/: package-lock.json  package.json  tsconfig.json
src/: integer.rs  lib.rs  main.rs  mnemonics.rs  pretty.rs  scan.rs  syntax.rs  tests.rs  token.rs  token_stream.rs  visit.rs
src/codegen/: inst.rs  mod.rs  write.rs  wsa.rs
src/dialects/: burghard.rs  dialect.rs  mod.rs  palaiologos.rs
src/lex/: byte_trie.rs  mod.rs  scan.rs  token_stream.rs
src/syntax/: cst.rs  inst.rs  mod.rs  opcode.rs  pretty.rs
src/tokens/: comment.rs  integer.rs  label.rs  mnemonics.rs  mod.rs  spaces.rs  string.rs  token.rs  words.rs
src/transform/: mod.rs  norm_space.rs  norm_strange.rs  visit.rs
src/ws/: mod.rs  token_source.rs
tests/: Makefile  README.md  base.mk  config.tmpl.mk
tests/burghard/: Makefile  wsa
tests/censoredusername/: Makefile
tests/esotope/: Makefile
tests/langs/: Makefile
tests/lime/: Makefile  generate.sh
tests/palaiologos/: Makefile
(+761 files in other folders)
