[package]
name = "omniwsa-ls"
version = "0.1.0"
authors = ["Thalia Archibald <thalia@archibald.dev>"]
edition = "2021"
description = "A language server for all dialects of Whitespace assembly"
repository = "https://github.com/thaliaarchi/omniwsa"
license = "MPL-2.0"
keywords = ["whitespace", "language-server"]
categories = ["compilers"]

[dependencies]
bstr = "1.11"
lsp-server = "0.7"
lsp-types = "0.97"
omniwsa = { path = ".." }
serde = "1.0"
serde_json = "1.0"
